<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/started"
            android:layout_gravity="right" android:paddingRight="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drive_startedTextView"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_gravity="right" android:paddingRight="5dp"
            android:enabled="false"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drive_latitudeTextView"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_gravity="right" android:paddingRight="5dp"
            android:visibility="visible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drive_longitudeTextView"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            android:layout_gravity="right" android:paddingRight="5dp"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drive_altitudeTextView"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elapsed_time"
            android:layout_gravity="right" android:paddingRight="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drive_durationTextView" android:textSize="25dp"/>
    </TableRow>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/drive_StartButton" android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/drive_StopButton" android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:id="@+id/drive_mapButton"
            android:layout_weight="1"/>
    </LinearLayout>



        <TableRow >
            <TextView
                android:id="@+id/speed"
                android:text="Speed"
                android:layout_width="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/abc_text_size_large_material" />
            <TextView
                android:id="@+id/tv_speed"
                android:text="0 km/h"
                android:layout_width="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="StartStop"
                android:id="@+id/buttonStartStop"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/background_light"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:textSize="22sp"
                android:typeface="sans"
                android:layout_column="8"/>
        </TableRow>
        <TableRow>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:id="@+id/pb_speed"
                android:indeterminate="false"
                android:progress="50"
                android:progressDrawable="@drawable/drawable_pb_tracking"
                android:layout_span="2"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/rpm"
                android:text="RPM"
                android:layout_marginTop="45dp"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/tv_rpm"
                android:text="0 rpm"
                android:layout_marginTop="45dp"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_alignParentStart="true" />
        </TableRow>
        <TableRow>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:id="@+id/pb_rpm"
                android:indeterminate="false"
                android:progress="50"
                android:progressDrawable="@drawable/drawable_pb_tracking"
                android:layout_span="2"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="Fuel"
                android:layout_marginTop="45dp"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/tv_fuel"
                android:text="0 %"
                android:layout_marginTop="45dp"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/abc_text_size_medium_material" />
        </TableRow>
        <TableRow>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:id="@+id/pb_fuel"
                android:indeterminate="false"
                android:progress="50"
                android:progressDrawable="@drawable/drawable_pb_tracking"
                android:layout_span="2"/>
        </TableRow>
</TableLayout>